# python-cookiecutter-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-test-publish.yaml  code-quality-checks-and-tests.yaml  create-or-update-repo.yaml
tests/: conftest.py  consts.py  test_cookiecut_generate_project.py  test_makefile.py
tests/fixtures/: project_dir.py
tests/functional_tests/: test_cookiecut_generate_project.py  test_makefile.py
tests/utils/: project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.sh
{{cookiecutter.repo_name}}/.github/workflows/: build-test-publish.yaml
{{cookiecutter.repo_name}}/src/example_pkg/: cities.json  states_info.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_import_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: conftest.py  consts.py  test_states_info.py
{{cookiecutter.repo_name}}/tests/fixtures/: __init__.py  example_fixture.py
{{cookiecutter.repo_name}}/tests/functional_tests/: __init__.py
{{cookiecutter.repo_name}}/tests/unit_tests/: __init__.py  test_states_info.py
